--- a/module2/style.css
+++ b/module2/style.css
@@ -13,7 +13,7 @@ h1{
  section {
      border: 1px solid black;
      background-color: #a9acbb;
-     margin: 15px
+     margin: 15px;
      background-color: #b5c4d2;
      margin: 10px;
  }
