--- a/module3/css/styles.css
+++ b/module3/css/styles.css
@@ -1,44 +1,24 @@
-.navbar.navbar-default {
-  background-color: #ddd;
-  border-radius: 0;
-  border: 1px solid black;
-}
-.navbar-default .navbar-brand {
-  color: black;
-  font-weight: bold;
-}
-.navbar-default .navbar-toggle.collapsed {
-  border-color: black;
-}
-.navbar-default .navbar-toggle.collapsed .icon-bar {
-  background-color: black;
-}
-.navbar-default .navbar-toggle.collapsed:hover,
-.navbar-default .navbar-toggle {
-  border-color: white;
+* {
+    box-sizing: border-box;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
-.navbar-default .navbar-toggle:hover .icon-bar,
-.navbar-default .navbar-toggle .icon-bar {
-  background-color: white;
+h1 {
+    font-size: 1.75em;
 }
 
-#navbar-menu li {
-  border: 1px solid gray;
+section {
+    background-color: #999999;
+    border: 1px solid #000000;
+    margin: 0 0 25px 0;
+    padding: 0;
 }
 
-h2 {
-  margin-bottom: 30px;
+section h3 {
+    font-size: 1.25em;
 }
 
-div.section {
-  background-color: #ddd;
-  padding: 5px 20px 15px 20px;
-  margin-bottom: 20px;
+section p {
+    padding: 0 6px 4px 6px;
 }
 
-@media (max-width: 768px) {
-  #navbar-menu {
-    background-color: white;
-  }
-}
