--- a/module3/css/styles.css
+++ b/module3/css/styles.css
@@ -1,24 +1,44 @@
-* {
-    box-sizing: border-box;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+.navbar.navbar-default {
+  background-color: #ddd;
+  border-radius: 0;
+  border: 1px solid black;
+}
+.navbar-default .navbar-brand {
+  color: black;
+  font-weight: bold;
+}
+.navbar-default .navbar-toggle.collapsed {
+  border-color: black;
+}
+.navbar-default .navbar-toggle.collapsed .icon-bar {
+  background-color: black;
+}
+.navbar-default .navbar-toggle.collapsed:hover,
+.navbar-default .navbar-toggle {
+  border-color: white;
 }
 
-h1 {
-    font-size: 1.75em;
+.navbar-default .navbar-toggle:hover .icon-bar,
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: white;
 }
 
-section {
-    background-color: #999999;
-    border: 1px solid #000000;
-    margin: 0 0 25px 0;
-    padding: 0;
+#navbar-menu li {
+  border: 1px solid gray;
 }
 
-section h3 {
-    font-size: 1.25em;
+h2 {
+  margin-bottom: 30px;
 }
 
-section p {
-    padding: 0 6px 4px 6px;
+div.section {
+  background-color: #ddd;
+  padding: 5px 20px 15px 20px;
+  margin-bottom: 20px;
 }
 
+@media (max-width: 768px) {
+  #navbar-menu {
+    background-color: white;
+  }
+}
